fixed layout issue

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,7 +14,7 @@
 .item {
   border-radius: 4px;
   position: relative;
-  height: 19rem;
+  height: 20rem;
   background-color: lightGrey;
   overflow-y: hidden;
   box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.2);
@@ -26,7 +26,7 @@
     background-color: rgb(0, 255, 170);
     padding: 1rem;
     transform: translate3d(0, -100%, 0);
-    transition: transform 300ms;
+    transition: transform 700ms;
   }
 
   a {
@@ -70,7 +70,7 @@ img {
   width: 100%;
   top: 0;
   transition: transform 300ms;
-  background-color: rgba(130, 255, 213, 0.9);
+  background-color: rgba(130, 255, 213, 0.8);
   transform: translate3d(0, 100%, 0);
 }
 
@@ -78,7 +78,7 @@ img {
   flex-grow: 1;
   padding: 1rem;
   opacity: 0;
-  transition: opacity 900ms 100ms;
+  transition: opacity 300ms 300ms;
 
   p {
     margin: 0;
